crates/project/tests/snapshots/discovery_snapshot__ambiguous_json.snap
---
source: crates/project/tests/discovery_snapshot.rs
assertion_line: 180
expression: draft
---
{
  "root": "/project",
  "name": "project",
  "locales": {
    "en": {}
  },
  "catalogs": [
    {
      "path": "/project/i18n/en.json",
      "format": "icu-json",
      "locale": "en",
      "confidence": "medium",
      "reason": "flat JSON key→string map — likely ICU-JSON catalog",
      "alternatives": []
    }
  ],
  "glossary": null,
  "backend": null
}
