crates/project/tests/snapshots/discovery_snapshot__misclassified_typescript.snap
---
source: crates/project/tests/discovery_snapshot.rs
assertion_line: 148
expression: draft
---
{
  "root": "/project",
  "name": "project",
  "locales": {},
  "catalogs": [],
  "glossary": null,
  "backend": null
}
