crates/project/tests/snapshots/discovery_snapshot__no_catalogs.snap
---
source: crates/project/tests/discovery_snapshot.rs
assertion_line: 192
expression: draft
---
{
  "root": "/project",
  "name": "project",
  "locales": {},
  "catalogs": [],
  "glossary": null,
  "backend": null
}
